versao instavel, idealizacao de trabalho com imagens